--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -15,12 +15,18 @@ layout: default
 
     <div class="row">
         <div class="col-md-4" >
-            <div id="item-image">
-                <img src="https://www.lib.uidaho.edu/digital/iwdl/images/sm/{{ page.resource-identifier }}.jpg" alt="pdf thumbnail" class="img-thumbnail">
+            {% assign images = site.data.hjccc-images | where: "object-id", page.object-id %}
+            {% for image in images %}
+            <div class="card mb-2">
+                <div id="item-image">
+                    <img src="{{ site.repo-url }}/utils/getthumbnail/collection/HJCCC/id/{{ image.cdm-number }}" alt="{{ image.title | escape }}" alt="item thumbnail" class="img-thumbnail">
+                </div>
+                <div id="item-link" class="text-center my-2">
+                    <p>{{ image.title }}</p>
+                    <a href="https://digital.lib.uidaho.edu/utils/ajaxhelper/?CISOROOT=HJCCC&amp;CISOPTR={{ image.cdm-number }}&amp;action=2&amp;DMSCALE=100&amp;DMWIDTH=6000&amp;DMHEIGHT=6000&amp;DMX=0&amp;DMY=0&amp;DMTEXT=&amp;DMROTATE=0" target="_blank" class="btn btn-sm btn-primary" title="image download">Download Image</a>
+                </div>
             </div>
-            <div id="item-link" class="text-center my-2">
-                <a href="https://digital.lib.uidaho.edu/utils/getfile/collection/idahowater/id/{{ page.cdm-number }}/filename/{{ page.resource-identifier }}.pdf" target="_blank" class="btn btn-primary" title="PDF download">Download PDF</a>
-            </div>
+            {% endfor %}
         </div>
         <div class="col-md-8">
             <div id="item-metadata" class="metadata">
@@ -30,10 +36,7 @@ layout: default
                 <tr>
                 <th class="field">{{ f.display-name }}:</th>
                 <td class="field-value">
-                {% if f.field == "subject" %}{% assign sub = page[f.field] | split: ";" %}{% for s in sub %}<a href="{{ s | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ s | strip }}</a>{% unless forloop.last %}; {% endunless %}{% endfor %}
-                {% elsif f.field == "collection" %}{% assign sub = page[f.field] | split: ";" %}{% for s in sub %}<a href="{{ s | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ s | strip }}</a>{% unless forloop.last %}; {% endunless %}{% endfor %}
-                {% elsif f.field == "series" %}{% assign sub = page[f.field] | split: ";" %}{% for s in sub %}<a href="{{ s | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ s | strip }}</a>{% unless forloop.last %}; {% endunless %}{% endfor %}
-                {% elsif f.field == "location" %}{% assign sub = page[f.field] | split: ";" %}{% for s in sub %}<a href="{{ s | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ s | strip }}</a>{% unless forloop.last %}; {% endunless %}{% endfor %}
+                {% if f.field == "functional-category" or f.field == "vessel-form" %}<a href="{{ page[f.field] | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ page[f.field] }}</a>
                 {% else %}{{ page[f.field] }}{% endif %}
                 </td>
                 </tr>
@@ -43,7 +46,7 @@ layout: default
         </div> 
     </div>
     <div class="text-center">
-        <a class="btn btn-secondary" href="{{ "/data/" | relative_url }}" role="button">&laquo; Back to data table</a>
+        <a class="btn btn-secondary" href="{{ "/data/" | relative_url }}" role="button">&laquo; Back to item table</a>
     </div>
 </div>
 
