add devin layouts

--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -23,7 +23,7 @@
         }
       }       
     }
-    var numberofint = $('div.item:visible').length;
+    var numberofint = $('div.card:visible').length;
     $("#numberof").html(numberofint);
   }
 
