--- a/_includes/index/locations.html
+++ b/_includes/index/locations.html
@@ -1,15 +1,11 @@
 <div class="card mb-3">
   <div class="card-body">
-    <h5 class="card-title">Locations</h5>
+    <h5 class="card-title">Forms</h5>
     <div class="row">
-      <div class="col-md-8">
-        <p class="card-text text-center"><a href="{{ "/map/" | relative_url }}" title="collection map"><img class="img-fluid rounded" src="{{ "/objects/map.jpg" | relative_url }}" alt="IWDL map"></a></p>
+      <div class="col-md-12">
+        <p class="card-text text-center"><a href="{{ "/forms/" | relative_url }}" title="collection forms"><img class="img-fluid rounded" src="{{ "/objects/forms.png" | relative_url }}" alt="Forms visualization"></a></p>
       </div>
-      <div class="col-md-4">
-        {%- assign topLocations = page.featured-places | split: ";" -%}
-        {% for l in topLocations %}<a class="btn btn-sm btn-outline-secondary m-1" href="{{ l | strip | uri_escape | prepend: '/browse/#' | absolute_url }}">{{ l | strip }}</a><br>
-        {% endfor %}
-      </div>
+      
     </div>
   </div>
 </div>
