add devin content

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -62,3 +62,8 @@ nav, footer {
     font-size:13px !important;
     margin-left:20px;
 }
+
+.hangingindent {
+    padding-left: 22px ;
+    text-indent: -22px ;
+  }
