Burke logo test 2

--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -3,7 +3,7 @@
         <div class="card-header">Supporters</div>
         <div class="card-body p-md-3">
         <p> 
-            <p class="text-center"><a href="http://www.burkemuseum.org/" target="_blank"><img src="/assets/BurkeLogo@2x.png" width="100" border="0" /></a></p>
+            <p class="text-center"><a href="http://www.burkemuseum.org/" target="_blank"><img src="HJCCC_source/assets/BurkeLogo@2x.png" width="100" border="0" /></a></p>
             <p class="card-text"><b>Asian American Comparative Collection</b></p>
             <p class="card-text"><b>University of Idaho Library’s Digital Initiatives Program</b></p>
           </p>
