--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -3,9 +3,9 @@
         <div class="card-header">Partners</div>
         <div class="card-body">
         <p> 
-            <p class="text-center mx-4 my-2"><a href="http://webpages.uidaho.edu/aacc/index.htm" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/aacc-postcard.png" class="img-fluid"></a></p>
-            <p class="text-center m-3"><a href="http://www.burkemuseum.org/" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/burkelogo.png" class="img-fluid"></a></p>
-            <p class="text-center mx-3"><a href="https://cdil.lib.uidaho.edu/#home" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/cdil-logo.png" class="img-fluid"></a></p>
+            <p class="text-center mx-3 my-2"><a href="http://webpages.uidaho.edu/aacc/index.htm" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/aacc-postcard.png" class="img-fluid"></a></p>
+            <p class="text-center mx-3 my-2"><a href="http://www.burkemuseum.org/" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/burkelogo.png" class="img-fluid"></a></p>
+            <p class="text-center mx-3 my-2"><a href="https://cdil.lib.uidaho.edu/#home" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/cdil-logo.png" class="img-fluid"></a></p>
           </p>
         </div>
     </div>
