trying to fix About Collections text

--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -13,9 +13,9 @@
         <div class="card-header">More About Collections</div>
         <div class="card-body p-md-3">
              <p>
-             <p> class="card-text" Japanese Gulch Village artifacts are part of the [Culture Collections](http://www.burkemuseum.org/research-and-collections/culture) at the Burke. Visit the following links to [learn more about the site](http://www.burkemuseum.org/blog/soles-japanese-gulch) and [connect to its aftifacts](http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts). </p>
-             <p>
-             <p class="card-text" Many of the other artifacts on this site are from the comparative collection at the AACC.  More examples of artifacts heald in this collection can be see [here](http://webpages.uidaho.edu/aacc/illus.htm).</p>
+             Japanese Gulch Village artifacts are part of the [Culture Collections](http://www.burkemuseum.org/research-and-collections/culture) at the Burke. Visit the following links to [learn more about the site](http://www.burkemuseum.org/blog/soles-japanese-gulch) and [connect to its aftifacts](http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts).
+             
+            Many of the other artifacts on this site are from the comparative collection at the AACC.  More examples of artifacts heald in this collection can be see [here](http://webpages.uidaho.edu/aacc/illus.htm).
              </p>
         </div>
     </div>
