--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -13,8 +13,8 @@
         <div class="card-header">More About Collections</div>
         <div class="card-body p-md-3">
              <p>
-                 <p class="card-text"> Japanese Gulch Village artifacts are part of the [Culture Collections](http://www.burkemuseum.org/research-and-collections/culture) at the Burke. Visit the following links to [learn more about the site](http://www.burkemuseum.org/blog/soles-japanese-gulch) and [connect to its aftifacts](http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts).</p>
-                 <p class="card-text"> Many of the other artifacts on this site are from the comparative collection at the AACC.  More examples of artifacts heald in this collection can be see [here](http://webpages.uidaho.edu/aacc/illus.htm).</p>
+                 <p class="card-text"> <b>Japanese Gulch Village<b> artifacts are part of the <a href="http://www.burkemuseum.org/research-and-collections/culture">Culture Collections</a> at the Burke. Visit the following links to <a href="http://www.burkemuseum.org/blog/soles-japanese-gulch">learn more about the site</a> and <a href="http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts">connect to its aftifacts</a>.</p>
+                 <p class="card-text"> Many of the other artifacts on this site are from the comparative collection at the <b>AACC<b>.  More examples of artifacts heald in this collection can be seen <a href="http://webpages.uidaho.edu/aacc/illus.htm">here</a>.</p>
              </p>
         </div>
     </div>
