--- a/_includes/aboutsidebar.html
+++ b/_includes/aboutsidebar.html
@@ -1,21 +1,17 @@
 <div class="col-md-4">
     <div class="card">
         <div class="card-header">Partners</div>
-        <div class="card-body">
-          <p> 
-            <p class="text-center mx-2 my-2"><a href="http://webpages.uidaho.edu/aacc/index.htm" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/aacc-postcard.png" class="img-fluid"></a></p>
-            <p class="text-center mx-2 my-4"><a href="http://www.burkemuseum.org/" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/burkelogo.png" class="img-fluid"></a></p>
-            <p class="text-center mx-2 my-2"><a href="https://cdil.lib.uidaho.edu/#home" target="_blank"><img src="https://uidaholib.github.io/HJCCC_source/assets/cdil-logo.png" class="img-fluid"></a></p>
-        </p>
+        <div class="card-body text-center">
+            <p class="mx-2 my-2"><a href="http://webpages.uidaho.edu/aacc/index.htm" target="_blank"><img src="{{ '/assets/aacc-postcard.png' | relative_url }}" class="img-fluid"></a></p>
+            <p class="mx-2 my-4"><a href="http://www.burkemuseum.org/" target="_blank"><img src="{{ '/assets/burkelogo.png' | relative_url }}" class="img-fluid"></a></p>
+            <p class="mx-2 my-2"><a href="https://cdil.lib.uidaho.edu/" target="_blank"><img src="{{ '/assets/cdil-logo.png' | relative_url }}" class="img-fluid"></a></p>
         </div>
     </div>
     <div class="card mt-4">
-        <div class="card-header">More About Collections</div>
-        <div class="card-body p-md-3">
-             <p>
-                 <p class="card-text"> Many of the other artifacts on this site are from the comparative collection at the <b>AACC</b>.  More examples of artifacts heald in this collection can be seen <a href="http://webpages.uidaho.edu/aacc/illus.htm">here</a>.</p>
-                 <p class="card-text"> <b>Japanese Gulch Village</b> artifacts are part of the <a href="http://www.burkemuseum.org/research-and-collections/culture">Culture Collections</a> at the Burke. Visit the following links to <a href="http://www.burkemuseum.org/blog/soles-japanese-gulch">learn more about the site</a> and <a href="http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts">connect to its aftifacts</a>.</p>
-             </p>
+        <div class="card-header">More About the Collections</div>
+        <div class="card-body">
+            <p class="card-text">Many of the artifacts on this site are from the <strong>Asian American Comparative Collection (AACC)</strong>. More examples of artifacts held in this collection can be seen at the <a href="http://webpages.uidaho.edu/aacc/illus.htm" target="_blank">AACC Artifact Illustrations site</a>.</p>
+            <p class="card-text"><strong>Japanese Gulch Village</strong> artifacts are part of the <a href="http://www.burkemuseum.org/research-and-collections/culture" target="_blank">Culture Collections</a> at the Burke Museum of Natural History and Culture. Learn more about the fascinating collections in recent articles <a href="http://www.burkemuseum.org/blog/soles-japanese-gulch" target="_blank">"The soles of the Japanese Gulch"</a> and <a href="http://www.burkemuseum.org/blog/connecting-japanese-gulch-artifacts" target="_blank">"Connecting with Japanese Gulch Artifacts"</a>.</p>
         </div>
     </div>
 </div>
