--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -4,8 +4,8 @@ gallery: true
 ---
 {%- assign fields = site.data.metadata-fields -%}
 
-<div class="py-3">
-<div class="container py-3 rounded">
+
+<div class="container py-3">
 
 <div class="container">
     <ul class="breadcrumb">
@@ -15,7 +15,7 @@ gallery: true
     </ul>
 
     <div class="row">
-        <div class="col-md-4" >
+        <div class="col-md-3" >
             {% assign images = site.data.hjccc-images | where: "object-id", page.object-id %}
             {% for image in images %}
             <div class="card mb-2">
@@ -29,27 +29,44 @@ gallery: true
             </div>
             {% endfor %}
         </div>
-        <div class="col-md-8">
-            <div id="item-metadata" class="metadata">
-                <table class="table">
 
-                {% for f in fields %}{% if page[f.field] %}
-                <tr>
-                <th class="field">{{ f.display-name }}:</th>
-                <td class="field-value">
-                {% if f.field == "functional-category" or f.field == "vessel-form" %}<a href="{{ page[f.field] | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ page[f.field] }}</a>
-                {% else %}{{ page[f.field] }}{% endif %}
-                </td>
-                </tr>
-                {% endif %}{% endfor %}
-                </table>
+        <div class="col-md-6">
+            <div id="item-metadata" class="metadata">
+                <dl>
+                    {% for f in fields %}{% if page[f.field] %}
+                    <dt class="field">{{ f.display-name }}:</dt>
+                    <dd class="field-value">
+                    {% if f.field == "functional-category" or f.field == "vessel-form" %}<a href="{{ page[f.field] | strip | uri_escape | prepend: "/browse/#" | absolute_url }}" >{{ page[f.field] }}</a>
+                    {% else %}{{ page[f.field] }}{% endif %}
+                    </dd>
+                    {% endif %}{% endfor %}
+                </dl>
             </div>
-        </div> 
+        </div>
+        <div class="col-md-3">
+            <div class="card mb-2">
+                <div class="card-header">Source</div>
+                <div class="card-body">
+                    <p class="card-text">Preferred Image Citation: {{ page.preferred-image-citation }}</p>
+                    <p class="card-text">Link: {{ page.url | absolute_url }}</p>
+                </div>
+            </div>
+            <div class="card mb-2">
+                <div class="card-header">Related Items</div>
+                <div class="card-body">
+                    {% assign facets = "functional-category;material;vessel-form" | split: ";" %}
+                    <p>
+                    {% for f in facets %}
+                        <a class="btn btn-sm btn-secondary m-1 filter" data-filter="{{ item[f] | trim |escape }}" href="{{ page[f] | trim | uri_escape | prepend: "/browse/#" | relative_url }}">{{ page[f] }}</a> 
+                    {% endfor %}
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="text-center">
         <a class="btn btn-secondary" href="{{ "/data/" | relative_url }}" role="button">&laquo; Back to item table</a>
     </div>
 </div>
 
-</div>
 </div>
