add lightgallery to item page

--- a/_includes/js/gallery-js.html
+++ b/_includes/js/gallery-js.html
@@ -2,6 +2,8 @@
 <script src="{{ "/assets/lightgallery/js/lightgallery-all.min.js" | relative_url }}"></script>
 <script>
     $(document).ready(function() {
-        $("#lightgallery").lightGallery(); 
+        $("#lightgallery").lightGallery({
+            thumbnail:true 
+        }); 
     });
 </script>
