image gallery to item page and non-CDM image links

--- a/_includes/js/gallery-js.html
+++ b/_includes/js/gallery-js.html
@@ -3,7 +3,8 @@
 <script>
     $(document).ready(function() {
         $("#lightgallery").lightGallery({
-            thumbnail:true 
+            selector: '.gallery-img',
+            thumbnail:true
         }); 
     });
 </script>
