--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -15,13 +15,6 @@ a {
         text-decoration: underline;
     }
 }
-/*
-main {
-    background: $background-texture;
-    .container {
-        background: $background-color;
-    }
-}*/
 /* banner */
 #title {
     a { 
@@ -43,7 +36,6 @@ main {
     color: $text-color;
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-    //color: rgba(0,0,0,.7);
     text-decoration: underline;
 }
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
@@ -54,7 +46,7 @@ nav, footer {
     background: $nav-background;
 }
 
-/** Begin Collections Pull **/
+/** all Collections nav **/
 .ijclist{
     padding-left:0px;
 }
@@ -62,8 +54,12 @@ nav, footer {
     font-size:13px !important;
     margin-left:20px;
 }
-
 .hangingindent {
     padding-left: 22px ;
     text-indent: -22px ;
-  }
+}
+
+/* item page */
+.gallery-img {
+    cursor: pointer;
+}
