--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -16,23 +16,24 @@ layout: page
     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 mb-2">
     <div class="card" >
         <a href="{{ "/data/" | absolute_url | append: item.object-id | append: ".html" }}">
-            {% if forloop.index < 20 %}<img class="card-img-top lazy" src="{{ site.repo-url }}/utils/ajaxhelper/?CISOROOT=HJCCC&amp;CISOPTR={%if item.compound-numbers%}{{ item.cdm-number | minus: 1 }}{% else %}{{ item.cdm-number}}{% endif %}&amp;action=2&amp;DMSCALE=15&amp;DMWIDTH=1000&amp;DMHEIGHT=1000&amp;DMX=0&amp;DMY=0&amp;DMTEXT=&amp;DMROTATE=0" alt="{{ item.title | escape }}">
-            {% else %}<img class="card-img-top lazy" data-original="{{ site.repo-url }}/utils/ajaxhelper/?CISOROOT=HJCCC&amp;CISOPTR={%if item.compound-numbers%}{{ item.cdm-number | minus: 1 }}{% else %}{{ item.cdm-number}}{% endif %}&amp;action=2&amp;DMSCALE=15&amp;DMWIDTH=1000&amp;DMHEIGHT=1000&amp;DMX=0&amp;DMY=0&amp;DMTEXT=&amp;DMROTATE=0" alt="{{ item.title | escape }}">{% endif %}
+            {% assign images = site.data.hjccc-images | where: "object-id", item.object-id | first %}
+            <img class="card-img-top lazy" {% if forloop.index < 20 %}src{% else %}data-original{% endif %}="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ images.identifier }}_th.jpg" alt="{{ item.title | escape }}">
         </a>
         <div class="card-body">
-            <h3 class="card-title">{{ item.title }}</h3>
+            <h4 class="card-title">{{ item.title }}</h4>
             {% assign facets = "functional-category;material;vessel-form" | split: ";" %}
             <p>
             {% for f in facets %}
                 <a class="btn btn-sm btn-secondary m-1 filter" data-filter="{{ item[f] | trim |escape }}" href="{{ item[f] | trim | uri_escape | prepend: "/browse/#" | relative_url }}">{{ item[f] }}</a> 
             {% endfor %} 
             </p>
-            <p class="card-text"><b>Material: </b>{{ item.material}}</p>
-            <p class="card-text"><b>Vessel Form: </b>{{ item.vessel-form}}</p>
-            <p class="card-text"><b>Decoration Type: </b>{{ item.decoration-type}}</p>
-            <p class="card-text"><b>Source: </b>{{ item.source}}</p>
-            <p class="card-text"><b>Catalog Number: </b>{{ item.catalog-number}}</p>
-            <p class="card-text"><b>Description: </b>{{ item.description | truncatewords: 20 }}</p>
+
+            <!--<p class="card-text"><strong>Material: </strong>{{ item.material}}</p>
+            <p class="card-text"><strong>Vessel Form: </strong>{{ item.vessel-form}}</p>-->
+            <p class="card-text"><strong>Decoration Type: </strong>{{ item.decoration-type}}</p>
+            <p class="card-text"><strong>Description: </strong>{{ item.description | truncatewords: 20 }}</p>
+            <p class="card-text"><strong>Source: </strong>{{ item.source}}</p>
+            <p class="card-text"><strong>Catalog Number: </strong>{{ item.catalog-number}}</p>
             <p class="d-none card-text">{{ item.artifact-dimensions}}</p>
             <p class="d-none card-text">{{ item.site-location}}</p>
             <p class="d-none card-text">{{ item.site-date}}</p>
@@ -46,7 +47,7 @@ layout: page
             <p class="d-none card-text">{{ item.interior-decoration-elements}}</p>
             <p class="d-none card-text">{{ item.marks}}</p>
             <p>
-                <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}" class="btn btn-sm btn-info" title="link to {{ item.title | escape }}">Go to Item</a>
+                <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}" class="btn btn-sm btn-info" title="link to {{ item.title | escape }}">View Item</a>
             </p>
         </div>
     </div>
