--- a/_includes/index/documents.html
+++ b/_includes/index/documents.html
@@ -1,6 +1,6 @@
 <a class="card mb-3" href="{{ "/data/" | relative_url }}">
   <div class="card-body">
-    <h5 class="card-title">Documents</h5>
+    <h5 class="card-title">Objects</h5>
     <p class="card-text">{{ items | size }} items</p>
   </div>
 </a>
