fix up data section, csv, json, table

--- a/_includes/js/table-js.html
+++ b/_includes/js/table-js.html
@@ -3,10 +3,9 @@
     $(document).ready(function() {
         $('#item-table').DataTable( {
             ajax: { url: '{{ "/data/metadata.json" | relative_url }}', dataSrc: 'documents' },
-            columns: [ { data: 'title' }, { data: 'date' }, { data: 'subjects' }, { data: 'description' }, { data: 'link' } ],
+            columns: [ { data: 'title' }, { data: 'vessel-form' }, { data: 'description' }, { data: 'catalog-number' }, { data: 'link' } ],
             columnDefs: [ 
                 { "render": function ( data, type, row ) { return '<a href="' + row.link +'">'+ data +'</a>'; },"targets": 0 },
-                { "render": function ( data, type, row ) { return data.join("; "); },"targets": 2 },
                 { "visible": false,  "targets": [ 4 ] }
             ],
             order: [[ 1, "desc" ]],
