--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -18,10 +18,8 @@ layout: page
                 <a class="btn btn-primary col-md-6 col-md-offset-3" href="{{ "/data/metadata.csv" | absolute_url }}" target="_blank">CSV spreadsheet</a>
                 <br>
                 <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/metadata.json" | absolute_url }}" target="_blank">JSON</a>
-                <br>
-                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/geodata.json" | absolute_url }}" target="_blank">GeoJSON</a>
-                <br>
-                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/subjects.json" | absolute_url }}" target="_blank">Subjects JSON</a>
+                <!--<br>
+                <a class="btn btn-primary col-md-6 col-md-offset-3 mt-2" href="{{ "/data/subjects.json" | absolute_url }}" target="_blank">Subjects JSON</a>-->
             </div>
         </div>
     </div>
@@ -34,9 +32,9 @@ layout: page
         <thead>
             <tr>
                 <th scope="col">Title</th>
-                <th scope="col">Date</th>
-                <th scope="col">Subjects</th>
+                <th scope="col">Form</th>
                 <th scope="col">Description</th>
+                <th scope="col">Catalog</th>
                 <th>Link</th>
             </tr>
         </thead>
