get started on glossary def page gallery

--- a/_layouts/term.html
+++ b/_layouts/term.html
@@ -2,30 +2,45 @@
 layout: default
 gallery: true
 ---
+{% assign objects = site.data.hjccc-objects %}
+<div class="container py-3">
 
-<div class="py-3">
-    <div class="container py-3 rounded">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li class="breadcrumb-item"><a href="{{ "/" | absolute_url }}">Home</a></li>
+            <li class="breadcrumb-item"><a href="{{ "/resources/" | absolute_url }}">Resources</a></li>
+            <li class="breadcrumb-item active">{{ page.term }}</li>
+        </ul>
     
-        <div class="container">
-            <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{{ "/" | absolute_url }}">Home</a></li>
-                <li class="breadcrumb-item"><a href="{{ "/resources/" | absolute_url }}">Resources</a></li>
-                <li class="breadcrumb-item active">{{ page.term }}</li>
-            </ul>
-        
-            <div class="row">
-                <div class="col-md-4" >
-                    <h2>{{ page.term }}</h2>
+        <div class="row">
+            <div class="col-md-5" >
+                <h2>{{ page.term }}</h2>
+                <p>{{ page.definition }}</p>
+                <p><a href="{{ '/browse/#' | append: page.search | relative_url }}">Browse</a></p>
+            </div>
+            <div class="col-md-7" id="lightgallery">
+                {% for item in objects %}
+                {% if item.subjects contains page.search %}
+                {% assign image = site.data.hjccc-images | where: "object-id", item.object-id | first %}
+                <div class="card mb-2">
+                    <div>
+                        <div class="gallery-img" data-src="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ image.identifier }}.jpg">
+                            <img src="https://www.lib.uidaho.edu/digital/hjccc/objects/{{ image.identifier }}_sm.jpg" alt="{{ image.title | escape }}" alt="item thumbnail" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="text-center my-2">
+                        <p>{{ image.title }}</p>
+                        <a href="{{ '/data/' | absolute_url | append: image.object-id | append: '.html' }}" class="btn btn-sm btn-primary" title="image download">View Item</a>
+                    </div>
                 </div>
-                <div class="col-md-8">
-                    <p>{{ page.definition }}</p>
-                    <p><a href="{{ '/browse/#' | append: page.search | relative_url }}">Browse</a></p>
-                </div> 
-            </div>
-            <div class="text-center">
-                <a class="btn btn-secondary" href="{{ "/resources/" | relative_url }}" role="button">&laquo; Glossary</a>
-            </div>
+                {% endif %}
+                {% endfor %}
+                
+            </div> 
         </div>
-    
+        <div class="text-center">
+            <a class="btn btn-secondary" href="{{ "/resources/" | relative_url }}" role="button">&laquo; Glossary</a>
+        </div>
     </div>
+
 </div>
