flesh out index a bit more

--- a/_includes/index/subjects.html
+++ b/_includes/index/subjects.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
   <div class="card-body">
-    <h5 class="card-title">Top Subjects</h5>
+    <h5 class="card-title">Facets</h5>
     {%- assign topSubjects = page.featured-subjects | split: "; " -%}
     <p class="card-text">
         {% for s in topSubjects %}
