--- a/_includes/tree.html
+++ b/_includes/tree.html
@@ -39,7 +39,7 @@
                   "Form": "Chawan",
                   "name": "Chawan - Yunomi (teacup)",
                   "Description": "Teacups come in a  variety of sizes and range in shape from hemispherical to cylindrical (Costello et. al 2001:36).",
-                  "url": "{{ '/browse/#Yunomi' | relative_url }}"
+                  "url": "{{ '/resources/Yunomi' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -47,7 +47,7 @@
                   "Form": "Chawan",
                   "name": "Chawan - Kobachi (small bowl)",
                   "Description": "A bowl used for small portions of food or side dishes (Simpson et al. 1980:83).",
-                  "url": "{{ '/browse/#Kobachi' | relative_url }}"
+                  "url": "{{ '/resources/Kobachi' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -55,7 +55,7 @@
                   "Form": "Chawan",
                   "name": "Chawan - Gohan Chawan (rice bowl)",
                   "Description": "Some researchers refer to these as rice/soup bowls because they could be used for either food (Bibb 2013:[10]; Costello et. al 2001:34).",
-                  "url": "{{ '/browse/#Gohan Chawan' | relative_url }}"
+                  "url": "{{ '/resources/Gohan Chawan/Jawan' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -63,7 +63,7 @@
                   "Form": "Chawan",
                   "name": "Chawan - Futa (bowl lid)",
                   "Description": "Bowl lids are shallow bowls that sit inside rice/soup bowl rims (Gorham 1971:185, 193).",
-                  "url": "{{ '/browse/#Futa' | relative_url }}"
+                  "url": "{{ '/resources/Futa' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -79,7 +79,7 @@
                   "Form": "",
                   "name": "Soba Choko (cold noodle cup)",
                   "Description": "A small cup for soba noodle sauce with a flat bottom and straight walls (Costello et. al 2001:36). ",
-                  "url": "{{ '/browse/#Soba Choko' | relative_url }}"
+                  "url": "{{ '/resources/Soba Choko' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -87,7 +87,7 @@
                   "Form": "",
                   "name": "Donburi (large soup bowl)",
                   "Description": "A large, deep bowl used for soup or don (Costello et. al 2001:35; Simpson et al. 1980:83).",
-                  "url": "{{ '/browse/#Donburi' | relative_url }}"
+                  "url": "{{ '/resources/Donburi' | relative_url }}"
                 }
               ]
             },
@@ -99,7 +99,7 @@
                   "Form": "",
                   "name": "Kozara (small dish/plate)",
                   "Description": "Kozara are used to hold small portions of specialty foods. They sometimes have lids (Ross 2012:10).",
-                  "url": "{{ '/browse/#Kozara' | relative_url }}"
+                  "url": "{{ '/resources/Kozara' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -107,7 +107,7 @@
                   "Form": "",
                   "name": "Nakazara (medium dish/plate)",
                   "Description": "A nakazara is a shallow dish or plate with rim diameters between about 18 and 21 cm (Ross 2012:10; Simpson et al. 2014:87).",
-                  "url": "{{ '/browse/#Nakazara' | relative_url }}"
+                  "url": "{{ '/resources/Nakazara' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -115,7 +115,7 @@
                   "Form": "",
                   "name": "Hirabachi (large dish/plate)",
                   "Description": "A larger serving dish with a shallow hollow profile (Simpson et al. 2014:87,90).",
-                  "url": "{{ '/browse/#Hirabachi' | relative_url }}"
+                  "url": "{{ '/resources/Hirabachi' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -123,7 +123,7 @@
                   "Form": "",
                   "name": "Mamezari (sauce dish/plate)",
                   "Description": "Mamezari are very small dishes for condiments or sweets (Walter 2012:128).",
-                  "url": "{{ '/browse/#Mamezari' | relative_url }}"
+                  "url": "{{ '/resources/Mamezari' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -131,7 +131,7 @@
                   "Form": "",
                   "name": "Namasu-Zara (pickle dish/plate)",
                   "Description": "Used for pickled vegetables, namasu-zara are a deep dishes with a large footring (Bibb 2013:[4]).",
-                  "url": "{{ '/browse/#Namasu-Zara' | relative_url }}"
+                  "url": "{{ '/resources/Namasu-Zara' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -139,7 +139,7 @@
                   "Form": "",
                   "name": "Sara (indeterminate dish/plate)",
                   "Description": "General term for a dish/plate of an indeterminate size.",
-                  "url": "{{ '/browse/#Sara' | relative_url }}"
+                  "url": "{{ '/resources/Sara' | relative_url }}"
                 }
               ]
             },
@@ -151,7 +151,7 @@
                   "Form": "",
                   "name": "Kyusu (small teapot)",
                   "Description": "These are smaller teapots designed for individual use that have a projecting side handle (Ross 2012:12).",
-                  "url": "{{ '/browse/#Kyusu' | relative_url }}"
+                  "url": "{{ '/resources/Kyusu' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -159,7 +159,7 @@
                   "Form": "",
                   "name": "Dobin (large teapot)",
                   "Description": "Dobin are larger teapots with a detachable top handle used to serve tea at family meals (Cort 2000:230–231).",
-                  "url": "{{ '/browse/#Dobin' | relative_url }}"
+                  "url": "{{ '/resources/Dobin' | relative_url }}"
                 },
                 {
                   "Category": "Tableware",
@@ -184,7 +184,7 @@
                     "Form": "",
                     "name": "Ochoko (small sake cup)",
                     "Description": "Many larger sake cups are within the size range for teacups and can be used for either beverage; ochoko are exclusively for sake (Leland E. Bibb 2015, elec. comm.).",
-                    "url": "{{ '/browse/#Ochoko' | relative_url }}"
+                    "url": "{{ '/resources/Ochoko' | relative_url }}"
                   },
                   {
                     "Category": "Sake ware",
@@ -192,7 +192,7 @@
                     "Form": "",
                     "name": "Guinomi (large sake cup)",
                     "Description": "Guinomi sizes and shapes are variable but they generally have thin walls and often have everted rims (Ross 2012:10). The largest guinomi can overlap in size with smaller teacups.  ",
-                    "url": "{{ '/browse/#Guinomi' | relative_url }}"
+                    "url": "{{ '/resources/Guinomi' | relative_url }}"
                   },
                   {
                     "Category": "Sake ware",
@@ -200,7 +200,7 @@
                     "Form": "",
                     "name": "Sakazuki (indeterminate sake cup)",
                     "Description": "General term for a sake cup of indeterminate size/function.",
-                    "url": "{{ '/browse/#Sakazuki' | relative_url }}"
+                    "url": "{{ '/resources/Sakazuki' | relative_url }}"
                   }
                 ]
             },
@@ -212,7 +212,7 @@
                   "Form": "",
                   "name": "Kampin Tokkuri (round decanter)",
                   "Description": "A kampin tokkuri is a decanter used to heat and serve sake that has a round body and tall neck (Cort 2000:231, 210).",
-                  "url": "{{ '/browse/#Kampin Tokkuri' | relative_url }}"
+                  "url": "{{ '/resources/Kampin Tokkuri' | relative_url }}"
                 },
                 {
                   "Category": "Sake ware",
@@ -220,7 +220,7 @@
                   "Form": "",
                   "name": "Sorori Tokkuri (slender decanter)",
                   "Description": "A tall, slender decanter used for heating and serving “thick, unrefined sake” (Cort 2000:231).",
-                  "url": "{{ '/browse/#Sorori Tokkuri' | relative_url }}"
+                  "url": "{{ '/resources/Sorori Tokkuri' | relative_url }}"
                 },
                 {
                   "Category": "Sake ware",
@@ -228,7 +228,7 @@
                   "Form": "",
                   "name": "Tokkuri (indeterminate sake decanter)",
                   "Description": "General term for a sake decanter of indeterminate size/function.",
-                  "url": "{{ '/browse/#Tokkuri' | relative_url }}"
+                  "url": "{{ '/resources/Tokkuri' | relative_url }}"
                 }
               ]
             }
