add local bootswatch css

--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -5,7 +5,7 @@
         </button>
 
         <div class="d-md-none float-right">
-            <a id="digleft" title="University of Idaho Library Digital Initiatives" class="btn btn-outline-light p-1 border-secondary" data-toggle="modal" data-target="#collections">
+            <a id="digleft" title="University of Idaho Library Digital Initiatives" class="btn btn-light p-1 border-secondary" data-toggle="modal" data-target="#collections">
             <img id="digleft" class="img-fluid" src="https://www.lib.uidaho.edu/digital/justdi_logo_sm.png" alt="digital initiatives logo" ></a>
         </div>
 
