--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 {% if page.layout == "document" %}{% include item-meta.html %}{% endif %}
 
 <link href="https://fonts.googleapis.com/css?family=Oswald:300,400" rel="stylesheet">
-{% if site.bstheme %}<link rel="stylesheet" href="https://bootswatch.com/4/{{site.bstheme | downcase}}/bootstrap.min.css" type="text/css">
+{% if site.bstheme %}<link rel="stylesheet" href="{{ 'assets/css/' | append: site.bstheme | append: '/bootstrap.min.css' }}" type="text/css">
 {% else %}<link rel="stylesheet" href="{{ "/assets/css/bootstrap.min.css" | absolute_url }}" type="text/css">{% endif %}
 {% if layout.gallery == true %}<link rel="stylesheet" href="{{ "/assets/lightgallery/css/lightgallery.min.css" | absolute_url }}" type="text/css">{% endif %}
 <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" type="text/css">
