--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,12 +13,32 @@ $base-line-height: 1.5;
 $text-color:       #111;
 $background-texture: url(https://www.lib.uidaho.edu/digital/grey_wash_wall.png) repeat scroll;
 $background-color: #fdfdfd;
-$nav-background: #e8e8e8; //#CBCCD0;
-$link-color:      #B06048;
+$nav-background: #191919; //#CBCCD0;
+$light-text-color: #fdfdfd;
 
-$grey-color:       #828282;
+$background-color: #fdfdfd;
+$nav-background: #e8e8e8; //#CBCCD0;
+$link-color:      #191919;
+
+$jumbotron-image: url('https://www.lib.uidaho.edu/images/U-Idaho_Library_Oct2_current.jpg');
+
+$grey-color:       #808080;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+
+$black-color:       #191919;
+$black-color-light: lighten($black-color, 40%);
+$black-color-dark:  darken($black-color, 25%);
+
+// vandal colors 
+$pride-gold:  #F1B300;
+$garnet: #D22630; 
+$wild-rose: #E10098;
+$palouse-green: #00AF66;
+$clearwater: #00AEC7;
+$clearwater-light: #8BD5E5;
+$payette-blue: #003E51;
+$ponderosa-pine: #004E42;
 
 // Width of the content area
 $content-width:    1800px;
@@ -39,7 +59,7 @@ $on-laptop:        800px;
     }
 }
 
-@import "custom";
+@import "custom", "colors";
 
 //@import "base";
 //@import "layout";
