--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -5,7 +5,7 @@ layout: page
 
 <h2 class="text-center">
     <input type="text" id="quicksearch" placeholder=" Filter ... " > 
-    <input class="btn btn-success align-top" title="Search" type="submit" value="Go" alt="Search" id="goButton" onclick="filterItems()"> 
+    <input class="btn btn-pride-gold align-top" title="Search" type="submit" value="Go" alt="Search" id="goButton" onclick="filterItems()"> 
     <a class="btn btn-secondary align-top filter" href="#" data-filter="">Reset</a>
     <br class="hidden-md-up">
     <span class="info2"><span id="numberof">{{ items | size }}</span> of {{ items | size }} items</span>
