view item pride gold outline?

--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -47,7 +47,7 @@ layout: page
             <p class="d-none card-text">{{ item.interior-decoration-elements}}</p>
             <p class="d-none card-text">{{ item.marks}}</p>
             <p>
-                <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}" class="btn btn-sm btn-info" title="link to {{ item.title | escape }}">View Item</a>
+                <a href="{{ '/data/' | absolute_url | append: item.object-id | append: '.html' }}" class="btn btn-sm btn-outline-pride-gold" title="link to {{ item.title | escape }}">View Item</a>
             </p>
         </div>
     </div>
