--- a/_includes/collection-nav.html
+++ b/_includes/collection-nav.html
@@ -28,7 +28,7 @@
             </script>
             <form class="form-inline my-2 my-lg-0" role="search" id="search" onsubmit="cdm_search(); return false;">
                 <input id="nav-search" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn my-2 my-sm-0 border" type="submit">Search</button>
+                <button class="btn-pride-gold my-2 my-sm-0 border" type="submit">Search</button>
             </form>
         </div>
     </div>    
